--- a/css/main.css
+++ b/css/main.css
@@ -15,9 +15,33 @@ body{
     font-family: 'Montserrat', sans-serif;
     background-color: var(--theme-color);
     color: var(--text-color);
+    padding-top: 70px;
 }
 
 a{
     text-decoration: none;
     color: var(--text-color);
+}
+
+.vertical-padding{
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
+
+.horizontal-padding{
+    padding-left: 25px;
+    padding-right: 25px;
+}
+
+@media (mind-width: 950px){
+    .vertical-padding{
+        padding-top: 70px;
+        padding-bottom: 70px;
+    }
+    
+    .horizontal-padding{
+        padding-left: 70px;
+        padding-right: 70px;
+    }
+    
 }
