--- a/css/navbar.css
+++ b/css/navbar.css
@@ -5,6 +5,7 @@
     left: 0;
     top: 0;
     width: 100%;
+    z-index: 100;
 }
 
 .topnav {
@@ -58,7 +59,54 @@
 }
 
 @media (max-width: 950px){
-    body{
-        background-color: blue;
-    }
+
+/*         MENU          */
+.menu {
+    flex-direction: column;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    align-items: center;
+    background-color: var(--menu-mobile-background-color);
+    height: 100%;
+    overflow-y: auto;
+
+    opacity: 0;
+    transition: opacity 0.3s;
+
+}
+
+.menu li {
+    padding: 0;
+}
+
+.menu a {
+    color: var(--text-color-inverse);
+    line-height: 60px;
+}
+
+.open-menu,
+.close-menu {
+    display: block;
+    border: none;
+    background:none;
+    cursor: pointer;
+}
+
+.close-menu{
+    align-self: flex-end;
+    padding: 20px 15px;
+}
+
+.menu_opened{
+    opacity: 1;
+    pointer-events: all;
+
+}
+
+.open-menu:focus:not(:focus-visible),
+.close-menu:focus:not(:focus-visible){
+    outline: none;
+}
 }
