seccion de contacto y pseudoclases after&hover

--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,13 @@
     --text-color-inverse:white;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+section [id]{
+    scroll-margin-top: 70px;
+}
+
 
 body{
     font-family: 'Montserrat', sans-serif;
