--- a/css/navbar.css
+++ b/css/navbar.css
@@ -51,6 +51,28 @@
     font-weight: 500;
     line-height: 50px;
     text-transform: uppercase;
+    position: relative;
+}
+.menu a::after{
+    content:"" ;
+    background-color: var(--secondary-color);
+    position: absolute;
+    left: 0;
+    top: 100%;
+    width: 100%;
+    height: 4px;
+
+    opacity: 0;
+    transition: 0.3s;
+}
+
+.menu a.selected::after,
+.menu a:hover:after{
+    opacity: 1;
+}
+
+.menu a:hover{
+    color: var(--primary-color);
 }
 
 .open-menu,
@@ -83,7 +105,8 @@
 
 .menu a {
     color: var(--text-color-inverse);
-    line-height: 60px;
+    line-height: 70px;
+    font-size: 25px;
 }
 
 .open-menu,
@@ -108,5 +131,14 @@
 .open-menu:focus:not(:focus-visible),
 .close-menu:focus:not(:focus-visible){
     outline: none;
+}
+.menu a::after{
+    content: none;
+}
+
+
+.menu a:hover,
+.menu a.selected{
+    color: var(--secondary-color);
 }
 }
