--- a/css/contact.css
+++ b/css/contact.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
+
 .contact{
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr;
     background-color: var(--primary-color);
+    padding: 0 1.5em;
 }
 
 .contact-title{
@@ -12,3 +15,102 @@
     margin: 25px;
     color: var(--text-color-inverse);
 }
+
+ul{
+    list-style: none;
+    padding: 0;
+}
+
+textarea{
+    width: 90%;
+    max-width: 90%;
+    max-height: 30%;
+}
+
+.contact-wrapper{
+    max-width: 980px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1.5em;
+
+}
+
+.contact-wrapper > * {
+    padding: 1em;
+}
+
+.contact-info{
+background-color: var(--secondary-color);
+}
+
+.contact-form form{
+    display: grid;
+    grid-template-columns: 1fr 1fr ;
+}
+
+.contact-form form .block{
+    grid-column: 1 / 3;
+}
+
+.contact-form form p{
+    margin: 0;
+    padding: 1em;
+}
+
+.contact-form form button,
+.contact-form form input,
+.contact-form form textarea{
+    width: 100%;
+    padding: .7em;
+    border: none;
+    background: none;
+    border-bottom: 1px solid var(--secondary-color);
+    outline: none;
+}
+
+.contact-form form button{
+    background: var(--secondary-color);
+    border: 0;
+    text-transform: uppercase;
+    padding: 1em;
+}
+.contact-form form button:hover,
+.contact-form form button:focus{
+    background-color: var(--text-color);
+    color: var(--text-color-inverse);
+    transition: background-color 0.5s;
+    outline: 0;
+}
+
+.contact-info h4,
+.contact-info ul,
+.contact-info p{
+    text-align: center;
+    margin: 0 0 1rem 0;
+}
+
+.contact-info ul li{
+    padding: .5em;
+}
+
+/*MEDIA QUERIES*/
+
+@media (min-width: 700px){
+    .contact-wrapper{
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+    }
+
+    .contact-wrapper > *{
+        padding: 2em;
+    }
+
+    .contact-info h4,
+    .contact-info ul,
+    .contact-info p{
+        padding: 1em;
+        text-align: left;
+    }
+}
+
+
