--- a/css/contact.css
+++ b/css/contact.css
@@ -5,6 +5,7 @@
     grid-template-columns: 1fr;
     background-color: var(--primary-color);
     padding: 0 1.5em;
+    justify-content: space-between;
 }
 
 .contact-title{
@@ -22,7 +23,7 @@ ul{
 }
 
 textarea{
-    width: 90%;
+    width: 70%;
     max-width: 90%;
     max-height: 30%;
 }
@@ -46,6 +47,7 @@ background-color: var(--secondary-color);
 .contact-form form{
     display: grid;
     grid-template-columns: 1fr 1fr ;
+    text-align: left;
 }
 
 .contact-form form .block{
@@ -55,11 +57,13 @@ background-color: var(--secondary-color);
 .contact-form form p{
     margin: 0;
     padding: 1em;
+    color: var(--text-color-inverse);
 }
 
 .contact-form form button,
 .contact-form form input,
 .contact-form form textarea{
+    font-weight: bold;
     width: 100%;
     padding: .7em;
     border: none;
@@ -108,7 +112,6 @@ background-color: var(--secondary-color);
     .contact-info h4,
     .contact-info ul,
     .contact-info p{
-        padding: 1em;
         text-align: left;
     }
 }
